<resources>
    <string name="app_name">MapTools</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="scale_converter">Scale Converter</string>
    <string name="disctance_calculator">Distance/Scale Calculator</string>
    <string name="coordinates_converter">Coordinates Converter\n (PRO)</string>
    <string name="area_calculator">Area Calculator\n (PRO)</string>
    <string name="disctance_calculator_land">Distance/Scale Calculator</string>
    <string name="coordinates_converter_land">Coordinates Converter (PRO)</string>
    <string name="area_calculator_land">Area Calculator (PRO)</string>
    <string name="pro">Available in PRO Version</string>
    <string name="scale_fractional">Fractional \n (e.g. 1:25,000)</string>
    <string name="scale_in_to_mile">Inches to the Mile</string>
    <string name="scale_mile_to_in">Miles to an Inch</string>
    <string name="scale_cm_to_km">Centimetres to \n a Kilometre</string>
    <string name="scale_km_to_cm">Kilometres to \n a Centimetre</string>
    <string name="scale_fractional_land">Fractional (e.g. 1:25,000)</string>
    <string name="scale_cm_to_km_land">Centimetres to a Kilometre</string>
    <string name="scale_km_to_cm_land">Kilometres to a Centimetre</string>
    <string name="error_input_int">Only digits allowed!</string>
    <string name="error_input_empty">Please enter a value.</string>
    <string name="error_input_empty_any">Please enter all required values.</string>
    <string name="error_input_zero">Enter value larger than zero.</string>
    <string name="error_input_zero_distance">Distance value needs to be larger than 0.</string>
    <string name="error_input_zero_scale">Scale value needs to be larger than 0.</string>
    <string name="error_input_one_scale">Fractional scale cannot be smaller than 1.</string>
    <string name="error_input_one">Enter value equal or larger than one.</string>
    <string name="error_input_too_big">The number entered is too big</string>
    <string name="error_converting_scale">Error occurred during scale calculations</string>
    <string name="error_unit_conversion">Error may have occurred during unit conversion</string>
    <string name="convert">Convert</string>
    <string name="clear">Clear</string>
    <string name="title_converted_fractional">Fractional:</string>
    <string name="title_converted_imperial">Imperial:</string>
    <string name="title_converted_metric">Metric:</string>
    <string name="value">value </string>
    <string name="in_to_mile">inch(es) to the Mile</string>
    <string name="mile_to_in">mile(s) to an inch</string>
    <string name="cm_to_km">cm to a km</string>
    <string name="km_to_cm">km to a cm</string>
    <string name="m_to_cm">metres to a cm</string>
    <string name="in_to_mile_less_message">less than 0.1 inch to the mile</string>
    <string name="mile_to_in_less_message">less than 0.01 mile to an inch</string>
    <string name="cm_to_km_less_message">less than 0.1 cm to a km</string>
    <string name="toolbar_activity_fractional">Fractional</string>
    <string name="title_activity_fractional">Fractional scale  (e.g. 1:10,000)</string>
    <string name="fractional_hint">enter scale denominator, for example 5000</string>
    <string name="fractional_1">1: </string>
    <string name="toolbar_activity_intomile"> Imperial: inches to the mile</string>
    <string name="title_activity_intomile">inches to the mile  </string>
    <string name="intomile_hint">enter number of inches</string>
    <string name="toolbar_activity_miletoinch">Imperial: miles to an inch</string>
    <string name="title_activity_miletoinch">miles to an inch  </string>
    <string name="miletoinch_hint">enter number of miles</string>
    <string name="toolbar_activity_cmtokm">Metric: cm to a km</string>
    <string name="title_activity_cmtokm">centimetres to a kilometre</string>
    <string name="cmtokm_hint">enter number of centimetres</string>
    <string name="toolbar_activity_kmtocm">Metric: km to a cm</string>
    <string name="title_activity_kmtocm">kilometres to a centimetre</string>
    <string name="kmtocm_hint">enter number of kilometres</string>
    <string name="toolbar_activity_distance">Distance Calculator</string>
    <string name="title_activity_distance">map - scale - ground \n
        distance calcultor(e.g. 1:10,000)</string>
    <string name="btn_map_scale">
        "INPUT:
   - distance on map
   - map scale

CALCULATE:
   - distance on ground"</string>
    <string name="btn_ground_scale">
        "INPUT:
   - distance on ground
   - map scale

CALCULATE:
   - distance on map"</string>
    <string name="btn_map_ground">
        "INPUT:
   - distance on map
   - distance on ground

CALCULATE:
   - map scale"</string>
    <string name="btn_map_scale_land">
        "INPUT:

 - distance
     on map
 - map scale


CALCULATE:

 - distance
   on ground"</string>
    <string name="btn_ground_scale_land">
        "INPUT:

 - distance
   on ground
 - map scale


CALCULATE:

 - distance
     on map"</string>
    <string name="btn_map_ground_land">
        "INPUT

 - distance
     on map
 - distance
   on ground


CALCULATE:

 - map scale"</string>
    <string name="title_activity_distance_map_scale">"Calculate distance on the ground"</string>
    <string name="subtitle_activity_distance_map_scale">"(given measured distance on the map &amp; the map scale)"</string>
    <string name="subtitle_activity_distance_map_scale_land">"(given measured distance on the map
and
the map scale)"</string>
    <string name="title_activity_distance_ground_scale">"Calculate distance on the map"</string>
    <string name="subtitle_activity_distance_ground_scale">"(given distance on the ground &amp; the map scale)"</string>
    <string name="subtitle_activity_distance_ground_scale_land">"(given distance on the ground
and
the map scale)"</string>
    <string name="title_activity_distance_map_ground">"Calculate scale of the map"</string>
    <string name="subtitle_activity_distance_map_ground">"(given distances on the map &amp; the ground)"</string>
    <string name="subtitle_activity_distance_map_ground_land">"(given distances on the map
and
the ground)"</string>
    <string name="distance_map_hint">distance on the map</string>
    <string name="distance_ground_hint">distance on the ground</string>
    <string name="distance_units_hint">choose the units</string>
    <string name="distance_scale_hint">map scale</string>
    <string name="distance_scaletype_hint">choose the scale type</string>
    <string name="radio_mm">mm</string>
    <string name="radio_cm">cm</string>
    <string name="radio_inch">inch</string>
    <string name="radio_km">km</string>
    <string name="radio_mile">mile</string>
    <string name="radio_nautical">nautical mile</string>
    <string name="radio_fractional">fractional</string>
    <string name="radio_intomile">in to the mile</string>
    <string name="radio_miletoin">mile to an in</string>
    <string name="radio_cmtokm">cm to a km</string>
    <string name="radio_kmtocm">km to a cm</string>
    <string name="btn_distance_calculate_ground">"CALCULATE  DISTANCE  on  the  GROUND"</string>
    <string name="btn_distance_calculate_ground_land">"CALCULATE
DISTANCE
on  the
GROUND"</string>
    <string name="btn_distance_calculate_map">"CALCULATE  DISTANCE  on  the  MAP"</string>
    <string name="btn_distance_calculate_map_land">"CALCULATE
DISTANCE
on  the
MAP"</string>
    <string name="btn_distance_calculate_scale">"CALCULATE  SCALE  of  the  MAP"</string>
    <string name="btn_distance_calculate_scale_land">"CALCULATE
SCALE
of  the
MAP"</string>
    <string name="spinner_scale_fractional">fractional</string>
    <string name="spinner_scale_intothemile">in to the mile</string>
    <string name="spinner_scale_miletoanin">mile to an in</string>
    <string name="spinner_scale_cmtoakm">cm to a km</string>
    <string name="spinner_scale_kmtoacm">km to a cm</string>
    <string-array name="distance_scale_type_values">
        <item>fractional</item>
        <item>in to the mile</item>
        <item>mile to an in</item>
        <item>cm to a km</item>
        <item>km to a cm</item>
    </string-array>
    <string name="spinner_distance_mm">millimetres</string>
    <string name="spinner_distance_cm">centimetres</string>
    <string name="spinner_distance_in">inches</string>
    <string-array name="distance_map_unit_values">
        <item>millimetre(s)</item>
        <item>centimetre(s)</item>
        <item>inch(es)</item>
    </string-array>
    <string-array name="distance_ground_unit_values">
        <item>feet</item>
        <item>metre(s)</item>
        <item>kilometre(s)</item>
        <item>mile(s)</item>
        <item>nautical mile(s)</item>
    </string-array>
    <string name="result_map_distance_description">distance \non the map: </string>
    <string name="result_ground_distance_description">distance \non the ground: </string>
    <string name="result_map_scale_description">"map scale: </string>
    <string name="less_than_0_001">less than 0.001</string>
    <string name="less_than_0_01">less than 0.01</string>
    <string name="less_than_0_1">less than 0.1</string>
    <string name="less_than_1">less than 1:1</string>
    <string name="more_than_1_000_000">more than 1 km</string>
    <string name="more_than_63_360">more than 1 mile</string>
    <string name="more_than_63_360_in">more than 63,360</string>
    <string name="more_than_999_999">more than 999,999 km</string>
    <string name="more_than_999_999_cm">more than 999,999</string>
    <string name="more_than_1_000_000_000">more than 1:1 billion</string>
    <string name="btn_length">Length</string>
    <string name="btn_area">Area</string>
    <string name="btn_angle">Angle</string>
    <string name="btn_weight">Weight</string>
    <string name="btn_speed">Speed</string>
    <string name="btn_volume">Volume</string>
    <string name="btn_temp">Temperature</string>
    <string name="btn_pressure">Pressure</string>
    <string-array name="unit_length_units_type">
        <item>micrometres</item>
        <item>millimetres</item>
        <item>centimetres</item>
        <item>inches</item>
        <item>feet</item>
        <item>yards</item>
        <item>metres</item>
        <item>fathoms</item>
        <item>kilometres</item>
        <item>statue miles</item>
        <item>nautical miles</item>
    </string-array>
    <string name="unit_length_hint">Enter length value</string>
    <string name="length_um">micrometres:</string>
    <string name="length_um_symbol">[μm]</string>
    <string name="length_mm">millimetres:</string>
    <string name="length_mm_symbol">[mm]</string>
    <string name="length_cm">centimetres:</string>
    <string name="length_cm_symbol">[cm]</string>
    <string name="length_in">inches:</string>
    <string name="length_in_symbol">[in]</string>
    <string name="length_ft">feet:</string>
    <string name="length_ft_symbol">[ft]</string>
    <string name="length_yd">yards:</string>
    <string name="length_yd_symbol">[yd]</string>
    <string name="length_m">metres:</string>
    <string name="length_m_symbol">[m]</string>
    <string name="length_ftm">fathoms:</string>
    <string name="length_ftm_symbol">[ftm]</string>
    <string name="length_km">kilometres:</string>
    <string name="length_km_symbol">[km]</string>
    <string name="length_statue_mile">statue miles:</string>
    <string name="length_statue_mile_symbol">[mi]</string>
    <string name="length_nautical_mile">nautical miles:</string>
    <string name="length_nautical_mile_symbol">[NM]</string>
</resources>