<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:background="@drawable/backrepeat"
    tools:context=".activity.MapToolsActivity">

    <Button
        android:id="@+id/btn_fractional"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/indent_very_small"
        android:layout_weight="1"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/scale_fractional"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="monospace"
        android:textColor="@color/colorButtonText"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="74dp" />

    <Button
        android:id="@+id/btn_intomile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/scale_in_to_mile"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="monospace"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="74dp"
        android:layout_marginBottom="@dimen/indent_very_small"
        android:textColor="@color/colorButtonText"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/button_rounded"/>

    <Button
        android:id="@+id/btn_miletoin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/scale_mile_to_in"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="monospace"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="74dp"
        android:layout_marginBottom="@dimen/indent_very_small"
        android:textColor="@color/colorButtonText"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/button_rounded"/>

    <Button
        android:id="@+id/btn_cmtokm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/scale_cm_to_km"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="monospace"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="74dp"
        android:layout_marginBottom="@dimen/indent_very_small"
        android:textColor="@color/colorButtonText"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/button_rounded"/>

    <Button
        android:id="@+id/btn_kmtocm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/scale_km_to_cm"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:typeface="monospace"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="74dp"
        android:layout_marginBottom="@dimen/indent_very_small"
        android:textColor="@color/colorButtonText"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/button_rounded"/>


</LinearLayout>